parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> FOR ID = expr : expr instruction
Rule 5     instruction -> WHILE ( condition ) instruction
Rule 6     instruction -> IF ( condition ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 7     instruction -> IF ( condition ) instruction  [precedence=nonassoc, level=1]
Rule 8     instruction -> { }
Rule 9     instruction -> { instructions }
Rule 10    instruction -> ;
Rule 11    instruction -> statement ;
Rule 12    expr -> expr '  [precedence=left, level=7]
Rule 13    expr -> - expr  [precedence=right, level=6]
Rule 14    expr -> STRING
Rule 15    expr -> FLOAT
Rule 16    expr -> INT
Rule 17    expr -> element
Rule 18    expr -> matrix
Rule 19    expr -> var
Rule 20    expr -> expr DOTDIV expr  [precedence=left, level=5]
Rule 21    expr -> expr DOTMUL expr  [precedence=left, level=5]
Rule 22    expr -> expr DOTSUB expr  [precedence=left, level=4]
Rule 23    expr -> expr DOTADD expr  [precedence=left, level=4]
Rule 24    expr -> expr / expr  [precedence=left, level=5]
Rule 25    expr -> expr * expr  [precedence=left, level=5]
Rule 26    expr -> expr - expr  [precedence=left, level=4]
Rule 27    expr -> expr + expr  [precedence=left, level=4]
Rule 28    expr -> function_name ( var_args )
Rule 29    expr -> ( expr )
Rule 30    comparator -> <  [precedence=nonassoc, level=3]
Rule 31    comparator -> >  [precedence=nonassoc, level=3]
Rule 32    comparator -> GEQ  [precedence=nonassoc, level=3]
Rule 33    comparator -> LEQ  [precedence=nonassoc, level=3]
Rule 34    comparator -> NEQ  [precedence=nonassoc, level=3]
Rule 35    comparator -> EQ  [precedence=nonassoc, level=3]
Rule 36    condition -> expr comparator expr
Rule 37    assign_op -> =
Rule 38    assign_op -> ADDASSIGN
Rule 39    assign_op -> SUBASSIGN
Rule 40    assign_op -> DIVASSIGN
Rule 41    assign_op -> MULASSIGN
Rule 42    statement -> PRINT var_args
Rule 43    statement -> RETURN expr
Rule 44    statement -> CONTINUE
Rule 45    statement -> BREAK
Rule 46    statement -> ID assign_op expr
Rule 47    statement -> element assign_op expr
Rule 48    function_name -> ZEROS
Rule 49    function_name -> ONES
Rule 50    function_name -> EYE
Rule 51    matrix -> [ var_args ]
Rule 52    element -> var [ var_args ]
Rule 53    var -> ID
Rule 54    var_args -> expr
Rule 55    var_args -> var_args , expr

Terminals, with rules where they appear:

'                    : 12
(                    : 5 6 7 28 29
)                    : 5 6 7 28 29
*                    : 25
+                    : 27
,                    : 55
-                    : 13 26
/                    : 24
:                    : 4
;                    : 10 11
<                    : 30
=                    : 4 37
>                    : 31
ADDASSIGN            : 38
BREAK                : 45
CONTINUE             : 44
DIVASSIGN            : 40
DOTADD               : 23
DOTDIV               : 20
DOTMUL               : 21
DOTSUB               : 22
ELSE                 : 6
EQ                   : 35
EYE                  : 50
FLOAT                : 15
FOR                  : 4
GEQ                  : 32
ID                   : 4 46 53
IF                   : 6 7
INT                  : 16
LEQ                  : 33
MULASSIGN            : 41
NEQ                  : 34
ONES                 : 49
PRINT                : 42
RETURN               : 43
STRING               : 14
SUBASSIGN            : 39
WHILE                : 5
ZEROS                : 48
[                    : 51 52
]                    : 51 52
error                : 
{                    : 8 9
}                    : 8 9

Nonterminals, with rules where they appear:

assign_op            : 46 47
comparator           : 36
condition            : 5 6 7
element              : 17 47
expr                 : 4 4 12 13 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 29 36 36 43 46 47 54 55
function_name        : 28
instruction          : 2 3 4 5 6 6 7
instructions         : 1 2 9
matrix               : 18
program              : 0
statement            : 11
var                  : 19 52
var_args             : 28 42 51 52 55


state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . FOR ID = expr : expr instruction
    (5) instruction -> . WHILE ( condition ) instruction
    (6) instruction -> . IF ( condition ) instruction ELSE instruction
    (7) instruction -> . IF ( condition ) instruction
    (8) instruction -> . { }
    (9) instruction -> . { instructions }
    (10) instruction -> . ;
    (11) instruction -> . statement ;
    (42) statement -> . PRINT var_args
    (43) statement -> . RETURN expr
    (44) statement -> . CONTINUE
    (45) statement -> . BREAK
    (46) statement -> . ID assign_op expr
    (47) statement -> . element assign_op expr
    (52) element -> . var [ var_args ]
    (53) var -> . ID
    FOR             shift and go to state 4
    WHILE           shift and go to state 6
    IF              shift and go to state 7
    {               shift and go to state 8
    ;               shift and go to state 9
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ID              shift and go to state 5

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    statement                      shift and go to state 10
    element                        shift and go to state 15
    var                            shift and go to state 16

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . FOR ID = expr : expr instruction
    (5) instruction -> . WHILE ( condition ) instruction
    (6) instruction -> . IF ( condition ) instruction ELSE instruction
    (7) instruction -> . IF ( condition ) instruction
    (8) instruction -> . { }
    (9) instruction -> . { instructions }
    (10) instruction -> . ;
    (11) instruction -> . statement ;
    (42) statement -> . PRINT var_args
    (43) statement -> . RETURN expr
    (44) statement -> . CONTINUE
    (45) statement -> . BREAK
    (46) statement -> . ID assign_op expr
    (47) statement -> . element assign_op expr
    (52) element -> . var [ var_args ]
    (53) var -> . ID
    $end            reduce using rule 1 (program -> instructions .)
    FOR             shift and go to state 4
    WHILE           shift and go to state 6
    IF              shift and go to state 7
    {               shift and go to state 8
    ;               shift and go to state 9
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ID              shift and go to state 5

    instruction                    shift and go to state 17
    statement                      shift and go to state 10
    element                        shift and go to state 15
    var                            shift and go to state 16

state 3

    (3) instructions -> instruction .
    FOR             reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    {               reduce using rule 3 (instructions -> instruction .)
    ;               reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    }               reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> FOR . ID = expr : expr instruction
    ID              shift and go to state 18


state 5

    (46) statement -> ID . assign_op expr
    (53) var -> ID .
    (37) assign_op -> . =
    (38) assign_op -> . ADDASSIGN
    (39) assign_op -> . SUBASSIGN
    (40) assign_op -> . DIVASSIGN
    (41) assign_op -> . MULASSIGN
    [               reduce using rule 53 (var -> ID .)
    =               shift and go to state 20
    ADDASSIGN       shift and go to state 21
    SUBASSIGN       shift and go to state 22
    DIVASSIGN       shift and go to state 23
    MULASSIGN       shift and go to state 24

    assign_op                      shift and go to state 19

state 6

    (5) instruction -> WHILE . ( condition ) instruction
    (               shift and go to state 25


state 7

    (6) instruction -> IF . ( condition ) instruction ELSE instruction
    (7) instruction -> IF . ( condition ) instruction
    (               shift and go to state 26


state 8

    (8) instruction -> { . }
    (9) instruction -> { . instructions }
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . FOR ID = expr : expr instruction
    (5) instruction -> . WHILE ( condition ) instruction
    (6) instruction -> . IF ( condition ) instruction ELSE instruction
    (7) instruction -> . IF ( condition ) instruction
    (8) instruction -> . { }
    (9) instruction -> . { instructions }
    (10) instruction -> . ;
    (11) instruction -> . statement ;
    (42) statement -> . PRINT var_args
    (43) statement -> . RETURN expr
    (44) statement -> . CONTINUE
    (45) statement -> . BREAK
    (46) statement -> . ID assign_op expr
    (47) statement -> . element assign_op expr
    (52) element -> . var [ var_args ]
    (53) var -> . ID
    }               shift and go to state 27
    FOR             shift and go to state 4
    WHILE           shift and go to state 6
    IF              shift and go to state 7
    {               shift and go to state 8
    ;               shift and go to state 9
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ID              shift and go to state 5

    instructions                   shift and go to state 28
    instruction                    shift and go to state 3
    statement                      shift and go to state 10
    element                        shift and go to state 15
    var                            shift and go to state 16

state 9

    (10) instruction -> ; .
    FOR             reduce using rule 10 (instruction -> ; .)
    WHILE           reduce using rule 10 (instruction -> ; .)
    IF              reduce using rule 10 (instruction -> ; .)
    {               reduce using rule 10 (instruction -> ; .)
    ;               reduce using rule 10 (instruction -> ; .)
    PRINT           reduce using rule 10 (instruction -> ; .)
    RETURN          reduce using rule 10 (instruction -> ; .)
    CONTINUE        reduce using rule 10 (instruction -> ; .)
    BREAK           reduce using rule 10 (instruction -> ; .)
    ID              reduce using rule 10 (instruction -> ; .)
    $end            reduce using rule 10 (instruction -> ; .)
    }               reduce using rule 10 (instruction -> ; .)
    ELSE            reduce using rule 10 (instruction -> ; .)


state 10

    (11) instruction -> statement . ;
    ;               shift and go to state 29


state 11

    (42) statement -> PRINT . var_args
    (54) var_args -> . expr
    (55) var_args -> . var_args , expr
    (12) expr -> . expr '
    (13) expr -> . - expr
    (14) expr -> . STRING
    (15) expr -> . FLOAT
    (16) expr -> . INT
    (17) expr -> . element
    (18) expr -> . matrix
    (19) expr -> . var
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . expr DOTMUL expr
    (22) expr -> . expr DOTSUB expr
    (23) expr -> . expr DOTADD expr
    (24) expr -> . expr / expr
    (25) expr -> . expr * expr
    (26) expr -> . expr - expr
    (27) expr -> . expr + expr
    (28) expr -> . function_name ( var_args )
    (29) expr -> . ( expr )
    (52) element -> . var [ var_args ]
    (51) matrix -> . [ var_args ]
    (53) var -> . ID
    (48) function_name -> . ZEROS
    (49) function_name -> . ONES
    (50) function_name -> . EYE
    -               shift and go to state 32
    STRING          shift and go to state 33
    FLOAT           shift and go to state 34
    INT             shift and go to state 35
    (               shift and go to state 40
    [               shift and go to state 41
    ID              shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45

    var_args                       shift and go to state 30
    expr                           shift and go to state 31
    element                        shift and go to state 36
    matrix                         shift and go to state 37
    var                            shift and go to state 38
    function_name                  shift and go to state 39

state 12

    (43) statement -> RETURN . expr
    (12) expr -> . expr '
    (13) expr -> . - expr
    (14) expr -> . STRING
    (15) expr -> . FLOAT
    (16) expr -> . INT
    (17) expr -> . element
    (18) expr -> . matrix
    (19) expr -> . var
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . expr DOTMUL expr
    (22) expr -> . expr DOTSUB expr
    (23) expr -> . expr DOTADD expr
    (24) expr -> . expr / expr
    (25) expr -> . expr * expr
    (26) expr -> . expr - expr
    (27) expr -> . expr + expr
    (28) expr -> . function_name ( var_args )
    (29) expr -> . ( expr )
    (52) element -> . var [ var_args ]
    (51) matrix -> . [ var_args ]
    (53) var -> . ID
    (48) function_name -> . ZEROS
    (49) function_name -> . ONES
    (50) function_name -> . EYE
    -               shift and go to state 32
    STRING          shift and go to state 33
    FLOAT           shift and go to state 34
    INT             shift and go to state 35
    (               shift and go to state 40
    [               shift and go to state 41
    ID              shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45

    expr                           shift and go to state 46
    element                        shift and go to state 36
    matrix                         shift and go to state 37
    var                            shift and go to state 38
    function_name                  shift and go to state 39

state 13

    (44) statement -> CONTINUE .
    ;               reduce using rule 44 (statement -> CONTINUE .)


state 14

    (45) statement -> BREAK .
    ;               reduce using rule 45 (statement -> BREAK .)


state 15

    (47) statement -> element . assign_op expr
    (37) assign_op -> . =
    (38) assign_op -> . ADDASSIGN
    (39) assign_op -> . SUBASSIGN
    (40) assign_op -> . DIVASSIGN
    (41) assign_op -> . MULASSIGN
    =               shift and go to state 20
    ADDASSIGN       shift and go to state 21
    SUBASSIGN       shift and go to state 22
    DIVASSIGN       shift and go to state 23
    MULASSIGN       shift and go to state 24

    assign_op                      shift and go to state 47

state 16

    (52) element -> var . [ var_args ]
    [               shift and go to state 48


state 17

    (2) instructions -> instructions instruction .
    FOR             reduce using rule 2 (instructions -> instructions instruction .)
    WHILE           reduce using rule 2 (instructions -> instructions instruction .)
    IF              reduce using rule 2 (instructions -> instructions instruction .)
    {               reduce using rule 2 (instructions -> instructions instruction .)
    ;               reduce using rule 2 (instructions -> instructions instruction .)
    PRINT           reduce using rule 2 (instructions -> instructions instruction .)
    RETURN          reduce using rule 2 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 2 (instructions -> instructions instruction .)
    BREAK           reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    }               reduce using rule 2 (instructions -> instructions instruction .)


state 18

    (4) instruction -> FOR ID . = expr : expr instruction
    =               shift and go to state 49


state 19

    (46) statement -> ID assign_op . expr
    (12) expr -> . expr '
    (13) expr -> . - expr
    (14) expr -> . STRING
    (15) expr -> . FLOAT
    (16) expr -> . INT
    (17) expr -> . element
    (18) expr -> . matrix
    (19) expr -> . var
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . expr DOTMUL expr
    (22) expr -> . expr DOTSUB expr
    (23) expr -> . expr DOTADD expr
    (24) expr -> . expr / expr
    (25) expr -> . expr * expr
    (26) expr -> . expr - expr
    (27) expr -> . expr + expr
    (28) expr -> . function_name ( var_args )
    (29) expr -> . ( expr )
    (52) element -> . var [ var_args ]
    (51) matrix -> . [ var_args ]
    (53) var -> . ID
    (48) function_name -> . ZEROS
    (49) function_name -> . ONES
    (50) function_name -> . EYE
    -               shift and go to state 32
    STRING          shift and go to state 33
    FLOAT           shift and go to state 34
    INT             shift and go to state 35
    (               shift and go to state 40
    [               shift and go to state 41
    ID              shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45

    expr                           shift and go to state 50
    element                        shift and go to state 36
    matrix                         shift and go to state 37
    var                            shift and go to state 38
    function_name                  shift and go to state 39

state 20

    (37) assign_op -> = .
    -               reduce using rule 37 (assign_op -> = .)
    STRING          reduce using rule 37 (assign_op -> = .)
    FLOAT           reduce using rule 37 (assign_op -> = .)
    INT             reduce using rule 37 (assign_op -> = .)
    (               reduce using rule 37 (assign_op -> = .)
    [               reduce using rule 37 (assign_op -> = .)
    ID              reduce using rule 37 (assign_op -> = .)
    ZEROS           reduce using rule 37 (assign_op -> = .)
    ONES            reduce using rule 37 (assign_op -> = .)
    EYE             reduce using rule 37 (assign_op -> = .)


state 21

    (38) assign_op -> ADDASSIGN .
    -               reduce using rule 38 (assign_op -> ADDASSIGN .)
    STRING          reduce using rule 38 (assign_op -> ADDASSIGN .)
    FLOAT           reduce using rule 38 (assign_op -> ADDASSIGN .)
    INT             reduce using rule 38 (assign_op -> ADDASSIGN .)
    (               reduce using rule 38 (assign_op -> ADDASSIGN .)
    [               reduce using rule 38 (assign_op -> ADDASSIGN .)
    ID              reduce using rule 38 (assign_op -> ADDASSIGN .)
    ZEROS           reduce using rule 38 (assign_op -> ADDASSIGN .)
    ONES            reduce using rule 38 (assign_op -> ADDASSIGN .)
    EYE             reduce using rule 38 (assign_op -> ADDASSIGN .)


state 22

    (39) assign_op -> SUBASSIGN .
    -               reduce using rule 39 (assign_op -> SUBASSIGN .)
    STRING          reduce using rule 39 (assign_op -> SUBASSIGN .)
    FLOAT           reduce using rule 39 (assign_op -> SUBASSIGN .)
    INT             reduce using rule 39 (assign_op -> SUBASSIGN .)
    (               reduce using rule 39 (assign_op -> SUBASSIGN .)
    [               reduce using rule 39 (assign_op -> SUBASSIGN .)
    ID              reduce using rule 39 (assign_op -> SUBASSIGN .)
    ZEROS           reduce using rule 39 (assign_op -> SUBASSIGN .)
    ONES            reduce using rule 39 (assign_op -> SUBASSIGN .)
    EYE             reduce using rule 39 (assign_op -> SUBASSIGN .)


state 23

    (40) assign_op -> DIVASSIGN .
    -               reduce using rule 40 (assign_op -> DIVASSIGN .)
    STRING          reduce using rule 40 (assign_op -> DIVASSIGN .)
    FLOAT           reduce using rule 40 (assign_op -> DIVASSIGN .)
    INT             reduce using rule 40 (assign_op -> DIVASSIGN .)
    (               reduce using rule 40 (assign_op -> DIVASSIGN .)
    [               reduce using rule 40 (assign_op -> DIVASSIGN .)
    ID              reduce using rule 40 (assign_op -> DIVASSIGN .)
    ZEROS           reduce using rule 40 (assign_op -> DIVASSIGN .)
    ONES            reduce using rule 40 (assign_op -> DIVASSIGN .)
    EYE             reduce using rule 40 (assign_op -> DIVASSIGN .)


state 24

    (41) assign_op -> MULASSIGN .
    -               reduce using rule 41 (assign_op -> MULASSIGN .)
    STRING          reduce using rule 41 (assign_op -> MULASSIGN .)
    FLOAT           reduce using rule 41 (assign_op -> MULASSIGN .)
    INT             reduce using rule 41 (assign_op -> MULASSIGN .)
    (               reduce using rule 41 (assign_op -> MULASSIGN .)
    [               reduce using rule 41 (assign_op -> MULASSIGN .)
    ID              reduce using rule 41 (assign_op -> MULASSIGN .)
    ZEROS           reduce using rule 41 (assign_op -> MULASSIGN .)
    ONES            reduce using rule 41 (assign_op -> MULASSIGN .)
    EYE             reduce using rule 41 (assign_op -> MULASSIGN .)


state 25

    (5) instruction -> WHILE ( . condition ) instruction
    (36) condition -> . expr comparator expr
    (12) expr -> . expr '
    (13) expr -> . - expr
    (14) expr -> . STRING
    (15) expr -> . FLOAT
    (16) expr -> . INT
    (17) expr -> . element
    (18) expr -> . matrix
    (19) expr -> . var
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . expr DOTMUL expr
    (22) expr -> . expr DOTSUB expr
    (23) expr -> . expr DOTADD expr
    (24) expr -> . expr / expr
    (25) expr -> . expr * expr
    (26) expr -> . expr - expr
    (27) expr -> . expr + expr
    (28) expr -> . function_name ( var_args )
    (29) expr -> . ( expr )
    (52) element -> . var [ var_args ]
    (51) matrix -> . [ var_args ]
    (53) var -> . ID
    (48) function_name -> . ZEROS
    (49) function_name -> . ONES
    (50) function_name -> . EYE
    -               shift and go to state 32
    STRING          shift and go to state 33
    FLOAT           shift and go to state 34
    INT             shift and go to state 35
    (               shift and go to state 40
    [               shift and go to state 41
    ID              shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45

    condition                      shift and go to state 51
    expr                           shift and go to state 52
    element                        shift and go to state 36
    matrix                         shift and go to state 37
    var                            shift and go to state 38
    function_name                  shift and go to state 39

state 26

    (6) instruction -> IF ( . condition ) instruction ELSE instruction
    (7) instruction -> IF ( . condition ) instruction
    (36) condition -> . expr comparator expr
    (12) expr -> . expr '
    (13) expr -> . - expr
    (14) expr -> . STRING
    (15) expr -> . FLOAT
    (16) expr -> . INT
    (17) expr -> . element
    (18) expr -> . matrix
    (19) expr -> . var
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . expr DOTMUL expr
    (22) expr -> . expr DOTSUB expr
    (23) expr -> . expr DOTADD expr
    (24) expr -> . expr / expr
    (25) expr -> . expr * expr
    (26) expr -> . expr - expr
    (27) expr -> . expr + expr
    (28) expr -> . function_name ( var_args )
    (29) expr -> . ( expr )
    (52) element -> . var [ var_args ]
    (51) matrix -> . [ var_args ]
    (53) var -> . ID
    (48) function_name -> . ZEROS
    (49) function_name -> . ONES
    (50) function_name -> . EYE
    -               shift and go to state 32
    STRING          shift and go to state 33
    FLOAT           shift and go to state 34
    INT             shift and go to state 35
    (               shift and go to state 40
    [               shift and go to state 41
    ID              shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45

    condition                      shift and go to state 53
    expr                           shift and go to state 52
    element                        shift and go to state 36
    matrix                         shift and go to state 37
    var                            shift and go to state 38
    function_name                  shift and go to state 39

state 27

    (8) instruction -> { } .
    FOR             reduce using rule 8 (instruction -> { } .)
    WHILE           reduce using rule 8 (instruction -> { } .)
    IF              reduce using rule 8 (instruction -> { } .)
    {               reduce using rule 8 (instruction -> { } .)
    ;               reduce using rule 8 (instruction -> { } .)
    PRINT           reduce using rule 8 (instruction -> { } .)
    RETURN          reduce using rule 8 (instruction -> { } .)
    CONTINUE        reduce using rule 8 (instruction -> { } .)
    BREAK           reduce using rule 8 (instruction -> { } .)
    ID              reduce using rule 8 (instruction -> { } .)
    $end            reduce using rule 8 (instruction -> { } .)
    }               reduce using rule 8 (instruction -> { } .)
    ELSE            reduce using rule 8 (instruction -> { } .)


state 28

    (9) instruction -> { instructions . }
    (2) instructions -> instructions . instruction
    (4) instruction -> . FOR ID = expr : expr instruction
    (5) instruction -> . WHILE ( condition ) instruction
    (6) instruction -> . IF ( condition ) instruction ELSE instruction
    (7) instruction -> . IF ( condition ) instruction
    (8) instruction -> . { }
    (9) instruction -> . { instructions }
    (10) instruction -> . ;
    (11) instruction -> . statement ;
    (42) statement -> . PRINT var_args
    (43) statement -> . RETURN expr
    (44) statement -> . CONTINUE
    (45) statement -> . BREAK
    (46) statement -> . ID assign_op expr
    (47) statement -> . element assign_op expr
    (52) element -> . var [ var_args ]
    (53) var -> . ID
    }               shift and go to state 54
    FOR             shift and go to state 4
    WHILE           shift and go to state 6
    IF              shift and go to state 7
    {               shift and go to state 8
    ;               shift and go to state 9
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ID              shift and go to state 5

    instruction                    shift and go to state 17
    statement                      shift and go to state 10
    element                        shift and go to state 15
    var                            shift and go to state 16

state 29

    (11) instruction -> statement ; .
    FOR             reduce using rule 11 (instruction -> statement ; .)
    WHILE           reduce using rule 11 (instruction -> statement ; .)
    IF              reduce using rule 11 (instruction -> statement ; .)
    {               reduce using rule 11 (instruction -> statement ; .)
    ;               reduce using rule 11 (instruction -> statement ; .)
    PRINT           reduce using rule 11 (instruction -> statement ; .)
    RETURN          reduce using rule 11 (instruction -> statement ; .)
    CONTINUE        reduce using rule 11 (instruction -> statement ; .)
    BREAK           reduce using rule 11 (instruction -> statement ; .)
    ID              reduce using rule 11 (instruction -> statement ; .)
    $end            reduce using rule 11 (instruction -> statement ; .)
    }               reduce using rule 11 (instruction -> statement ; .)
    ELSE            reduce using rule 11 (instruction -> statement ; .)


state 30

    (42) statement -> PRINT var_args .
    (55) var_args -> var_args . , expr
    ;               reduce using rule 42 (statement -> PRINT var_args .)
    ,               shift and go to state 55


state 31

    (54) var_args -> expr .
    (12) expr -> expr . '
    (20) expr -> expr . DOTDIV expr
    (21) expr -> expr . DOTMUL expr
    (22) expr -> expr . DOTSUB expr
    (23) expr -> expr . DOTADD expr
    (24) expr -> expr . / expr
    (25) expr -> expr . * expr
    (26) expr -> expr . - expr
    (27) expr -> expr . + expr
    ,               reduce using rule 54 (var_args -> expr .)
    ;               reduce using rule 54 (var_args -> expr .)
    ]               reduce using rule 54 (var_args -> expr .)
    )               reduce using rule 54 (var_args -> expr .)
    '               shift and go to state 56
    DOTDIV          shift and go to state 57
    DOTMUL          shift and go to state 58
    DOTSUB          shift and go to state 59
    DOTADD          shift and go to state 60
    /               shift and go to state 61
    *               shift and go to state 62
    -               shift and go to state 63
    +               shift and go to state 64


state 32

    (13) expr -> - . expr
    (12) expr -> . expr '
    (13) expr -> . - expr
    (14) expr -> . STRING
    (15) expr -> . FLOAT
    (16) expr -> . INT
    (17) expr -> . element
    (18) expr -> . matrix
    (19) expr -> . var
    (20) expr -> . expr DOTDIV expr
    (21) expr -> . expr DOTMUL expr
    (22) expr -> . expr DOTSUB expr
    (23) expr -> . expr DOTADD expr
    (24) expr -> . expr / expr
    (25) expr -> . expr * expr
    (26) expr -> . expr - expr
    (27) expr -> . expr + expr
    (28) expr -> . function_name ( var_args )
    (29) expr -> . ( expr )
    (52) element -> . var [ var_args ]
    (51) matrix -> . [ var_args ]
    (53) var -> . ID
    (48) function_name -> . ZEROS
    (49) function_name -> . ONES
    (50) function_name -> . EYE
    -               shift and go to state 32
    STRING          shift and go to state 33
    FLOAT           shift and go to state 34
    INT             shift and go to state 35
    (               shift and go to state 40
    [               shift and go to state 41
    ID              shift and go to state 42
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45

    expr                           shift and go to state 65
    element                        shift and go to state 36
    matrix                         shift and go to state 37
    var                            shift and go to state 38
    function_name                  shift and go to state 39

state 33

    (14) expr -> STRING .
    '               reduce using rule 14 (expr -> STRING .)
    DOTDIV          reduce using rule 14 (expr -> STRING .)
    DOTMUL          reduce using rule 14 (expr -> STRING .)
    DOTSUB          reduce using rule 14 (expr -> STRING .)
    DOTADD          reduce using rule 14 (expr -> STRING .)
    /               reduce using rule 14 (expr -> STRING .)
    *               reduce using rule 14 (expr -> STRING .)
    -               reduce using rule 14 (expr -> STRING .)
    +               reduce using rule 14 (expr -> STRING .)
    ,               reduce using rule 14 (expr -> STRING .)
    ;               reduce using rule 14 (expr -> STRING .)
    <               reduce using rule 14 (expr -> STRING .)
    >               reduce using rule 14 (expr -> STRING .)
    GEQ             reduce using rule 14 (expr -> STRING .)
    LEQ             reduce using rule 14 (expr -> STRING .)
    NEQ             reduce using rule 14 (expr -> STRING .)
    EQ              reduce using rule 14 (expr -> STRING .)
    )               reduce using rule 14 (expr -> STRING .)
    ]               reduce using rule 14 (expr -> STRING .)
    :               reduce using rule 14 (expr -> STRING .)
    FOR             reduce using rule 14 (expr -> STRING .)
    WHILE           reduce using rule 14 (expr -> STRING .)
    IF              reduce using rule 14 (expr -> STRING .)
    {               reduce using rule 14 (expr -> STRING .)
    PRINT           reduce using rule 14 (expr -> STRING .)
    RETURN          reduce using rule 14 (expr -> STRING .)
    CONTINUE        reduce using rule 14 (expr -> STRING .)
    BREAK           reduce using rule 14 (expr -> STRING .)
    ID              reduce using rule 14 (expr -> STRING .)


state 34

    (15) expr -> FLOAT .
    '               reduce using rule 15 (expr -> FLOAT .)
    DOTDIV          reduce using rule 15 (expr -> FLOAT .)
    DOTMUL          reduce using rule 15 (expr -> FLOAT .)
    DOTSUB          reduce using rule 15 (expr -> FLOAT .)
    DOTADD          reduce using rule 15 (expr -> FLOAT .)
    /               reduce using rule 15 (expr -> FLOAT .)
    *               reduce using rule 15 (expr -> FLOAT .)
    -               reduce using rule 15 (expr -> FLOAT .)
    +               reduce using rule 15 (expr -> FLOAT .)
    ,               reduce using rule 15 (expr -> FLOAT .)
    ;               reduce using rule 15 (expr -> FLOAT .)
    <               reduce using rule 15 (expr -> FLOAT .)
    >               reduce using rule 15 (expr -> FLOAT .)
    GEQ             reduce using rule 15 (expr -> FLOAT .)
    LEQ             reduce using rule 15 (expr -> FLOAT .)
    NEQ             reduce using rule 15 (expr -> FLOAT .)
    EQ              reduce using rule 15 (expr -> FLOAT .)
    )               reduce using rule 15 (expr -> FLOAT .)
    ]               reduce using rule 15 (expr -> FLOAT .)
    :               reduce using rule 15 (expr -> FLOAT .)
    FOR             reduce using rule 15 (expr -> FLOAT .)
    WHILE           reduce using rule 15 (expr -> FLOAT .)
    IF              reduce using rule 15 (expr -> FLOAT .)
    {               reduce using rule 15 (expr -> FLOAT .)
    PRINT           reduce using rule 15 (expr -> FLOAT .)
    RETURN          reduce using rule 15 (expr -> FLOAT .)
    CONTINUE        reduce using rule 15 (expr -> FLOAT .)
    BREAK           reduce using rule 15 (expr -> FLOAT .)
    ID              reduce using rule 15 (expr -> FLOAT .)


state 35

    (16) expr -> INT .
    '               reduce using rule 16 (expr -> INT .)
    DOTDIV          reduce using rule 16 (expr -> INT .)
    DOTMUL          reduce using rule 16 (expr -> INT .)
    DOTSUB          reduce using rule 16 (expr -> INT .)
    DOTADD          reduce using rule 16 (expr -> INT .)
    /               reduce using rule 16 (expr -> INT .)
    *               reduce using rule 16 (expr -> INT .)
    -               reduce using rule 16 (expr -> INT .)
    +               reduce using rule 16 (expr -> INT .)
    ,               reduce using rule 16 (expr -> INT .)
    ;               reduce using rule 16 (expr -> INT .)
    <               reduce using rule 16 (expr -> INT .)
    >               reduce using rule 16 (expr -> INT .)
    GEQ             reduce using rule 16 (expr -> INT .)
    LEQ             reduce using rule 16 (expr -> INT .)
    NEQ             reduce using rule 16 (expr -> INT .)
    EQ              reduce using rule 16 (expr -> INT .)
    )               reduce using rule 16 (expr -> INT .)
    ]               reduce using rule 16 (expr -> INT .)
    :               reduce using rule 16 (expr -> INT .)
    FOR             reduce using rule 16 (expr -> INT .)
    WHILE           reduce using rule 16 (expr -> INT .)
    IF              reduce using rule 16 (expr -> INT .)
    {               reduce using rule 16 (expr -> INT .)
    PRINT           reduce using rule 16 (expr -> INT .)
    RETURN          reduce using rule 16 (expr -> INT .)
    CONTINUE        reduce using rule 16 (expr -> INT .)
    BREAK           reduce using rule 16 (expr -> INT .)
    ID              reduce using rule 16 (expr -> INT .)


state 36
